# envy

./: .editorconfig  .envyrc.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TESTING.md  package.json  pyproject.toml
.github/workflows/: ci.yml
api/: Makefile  README.md  go.mod  go.sum
api/cmd/envyd/: main.go
api/internal/crypto/: envelope.go
api/internal/db/: db.go  migrate.go
api/internal/repo/: audit_logs.go  environment_versions.go  environments.go  projects.go  proposals.go  variables.go
api/internal/server/: context.go  environments.go  projects.go  server.go
api/migrations/: 0002_projects_crud.sql  0005_environment_versions.sql  0006_change_proposals.sql  0006_proposals.sql  0007_audit_logs.sql  0009_variable_values.sql
cli/: README.md  go.mod
cli/cmd/: doctor.go  root.go  status.go
cli/cmd/envy/: main.go
cli/internal/api/: client.go
cli/internal/cmd/: add.go  approve.go  diff.go  export.go  init.go  login.go  propose.go  pull.go  rollback.go  root.go  run.go  verify.go
cli/internal/config/: config.go
cli/internal/env/: envfile.go
cli/internal/lockfile/: lockfile.go
cli/internal/schema/: schema.go
docker/postgres/: Dockerfile
docs/: FILES.md  MODEL.md  README.md
envy/: __main__.py  cli.py  secret_managers.py  templating.py
examples/: config.toml  gitconfig.tmpl
src/: config.ts  template.test.ts  template.ts
src/commands/: restore.ts
src/envy/: cli.py
src/providers/: doppler.ts  index.ts  op.ts
tests/: test_bootstrap.py  test_cli.py  test_config.py
(+9 files in other folders)
